plugins {
    id('java-library')
    id('com.gradleup.shadow') version('9.6.1')
    id('com.vanniktech.maven.publish') version('0.36.0')
}

group('eu.koboo')
version('3.3.0')

repositories {
    mavenCentral()
}

dependencies {
    // The mongodb driver itself
    // https://central.sonatype.com/artifact/org.mongodb/mongodb-driver-sync
    def mongoDriverVersion = "5.12.0"
    api("org.mongodb:mongodb-driver-sync:$mongoDriverVersion")
    testImplementation("org.mongodb:mongodb-driver-sync:$mongoDriverVersion")

    // Eliminate boilerplate code
    // https://central.sonatype.com/artifact/org.projectlombok/lombok
    def lombokVersion = "1.18.48"
    compileOnly("org.projectlombok:lombok:$lombokVersion")
    annotationProcessor("org.projectlombok:lombok:$lombokVersion")
    testImplementation("org.projectlombok:lombok:$lombokVersion")
    testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")

    // Test-Suite runtime
    def jupiterVersion = "6.1.3"
    // https://central.sonatype.com/artifact/org.junit.jupiter/junit-jupiter-engine
    testImplementation("org.junit.jupiter:junit-jupiter-engine:$jupiterVersion")
    // https://central.sonatype.com/artifact/org.junit.jupiter/junit-jupiter-api
    testImplementation("org.junit.jupiter:junit-jupiter-api:$jupiterVersion")
    // https://central.sonatype.com/artifact/org.junit.platform/junit-platform-launcher
    testImplementation("org.junit.platform:junit-platform-launcher:$jupiterVersion")

    // SLF4j logger for test-suite
    // https://central.sonatype.com/artifact/org.slf4j/slf4j-jdk14
    def slf4jVersion = "2.0.19"
    testImplementation("org.slf4j:slf4j-jdk14:$slf4jVersion")
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

compileJava {
    options.fork = true
    options.encoding = 'UTF-8'
}

tasks.register('sourcesJar', Jar) {
    from sourceSets.main.allJava
    archiveClassifier.set('sources')
}
tasks.register('javadocJar', Jar) {
    from javadoc.destinationDir
    archiveClassifier.set('javadoc')
}

artifacts {
    archives(shadowJar)
    archives(sourcesJar)
    archives(javadocJar)
}

mavenPublishing {
    coordinates(project.group.toString(), "${project.name}", project.version.toString())

    pom {
        name = 'En2do'
        description = 'MongoDB entity to document wrapper'
        inceptionYear = '2022'
        url = 'https://github.com/Koboo/en2do'
        licenses {
            license {
                name = 'MIT'
                url = 'https://mit-license.org/'
                distribution = 'https://mit-license.org/'
            }
        }
        developers {
            developer {
                id = 'koboo'
                name = 'Koboo'
                email = 'admin@koboo.eu'
                url = 'https://github.com/Koboo/'
            }
        }
        scm {
            url = 'https://github.com/Koboo/en2do'
            connection = 'scm:git:https://github.com/Koboo/en2do'
            developerConnection = 'scm:git:https://github.com/Koboo/en2do'
        }
    }
    publishToMavenCentral()
    signAllPublications()
}